Enviando nuevo cambios

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Hola GIT!!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam impedit accusamus dignissimos explicabo id atque quod libero nobis delectus ipsum quis laboriosam ratione iusto illum, fuga earum, voluptatum consequuntur sit!</p>
 </body>
 </html>
